--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!-- xamarth -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Samarth</title>
+  <meta http-equiv="refresh" content="0; url=http://samarth.site">
+  <style>
+    .body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      background-color: #030712;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      width: 100vw;
+    }
+  </style>
+</head>
+
+<body class="body" id="body">
+  <img src="https://raw.githubusercontent.com/xamarth/Animated-Fluent-Emojis/master/Emojis/Activities/Teddy%20Bear.png"
+    alt="Teddy Bear" width="500" height="500" />
+</body>
+
+</html>
