--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Samarth</title>
-  <meta http-equiv="refresh" content="0; url=http://samarth.site">
+  <title>Loading...</title>
+  <meta http-equiv="refresh" content="0; url=http://xamarth.online">
   <style>
     .body {
       margin: 0;
@@ -22,7 +22,7 @@
 </head>
 
 <body class="body" id="body">
-  <img src="https://raw.githubusercontent.com/xamarth/Animated-Fluent-Emojis/master/Emojis/Activities/Teddy%20Bear.png"
+  <img src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Activities/Teddy%20Bear.png"
     alt="Teddy Bear" width="500" height="500" />
 </body>
 
